# AI-Assistant

./: .gitignore  LICENSE  R2AIStage1DATA.json  README.md  Thông tin cuộc thi.txt  docker-compose.yaml  generate_submission.py  get_info.py  main.py  pyproject.toml  requirements.txt  scratch.py  scratch_fast.py  test_1_cau.json  test_2_cau.json  test_output.json  test_results.json
.github/workflows/: ci.yml
data/: rag_evaluation_dataset.jsonl
src/api/: dependencies.py  main.py
src/api/routers/: chat.py  document.py
src/core/: cache.py  config.py  model_manager.py
src/evaluation/: evaluator.py
src/generation/: generator.py
src/ingestion/: pdf_loader.py  vector_store.py
src/retrieval/: search_engine.py
src/ui/: streamlit_app.py
src/utils/: nlp_utils.py
tests/: ingestion_script.py  main_script.py  test_fast_ci.py  test_generator.py  test_pdf_loader.py  test_retrieval.py
