[project]
name = "vietnamese-rag-system"
version = "0.1.0"
description = "A production-oriented Retrieval-Augmented Generation (RAG) system for Vietnamese."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "flagembedding>=1.2.0",
    "google-genai>=0.2.0",
    "httpx>=0.26.0",
    "jupyterlab>=4.1.0",
    "langchain-community>=0.0.13",
    "langchain-core>=0.1.10",
    "matplotlib>=3.8.2",
    "nest-asyncio>=1.6.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "peft<=0.11.0",
    "pydantic-settings>=2.1.0",
    "pymupdf>=1.23.8",
    "python-dotenv>=1.0.1",
    "qdrant-client>=1.7.0",
    "redis>=5.0.1",
    "requests>=2.31.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=2.7.0",
    "streamlit>=1.31.0",
    "torch>=2.1.0",
    "tqdm>=4.66.1",
    "transformers<4.40.0",
    "underthesea>=6.8.0",
    "uvicorn[standard]>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
